--- a/views/users/password-reset.pug
+++ b/views/users/password-reset.pug
@@ -4,7 +4,9 @@ block content
 	.reg-form-container.centered
 		h2 <i class="material-icons">lock</i>  Reset Password Request
 				
-		form.form.form-validation(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
+		form.form.form-validation(action="/api/users/password-reset" method="PATCH" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
+			input(type="hidden" name="_csrf" value= csrfToken)
+
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
