--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -4,7 +4,9 @@ block content
 	.reg-form-container.centered
 		h2 <i class="material-icons">person</i>  User Login 
 		
-		form.form.form-validation(action="/api/users/login" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
+		form.form.form-validation(action="/api/users/login" method="PUT" data-jsclass="formValidator,formController" data-submitter="#submitter")
+			input(type="hidden" name="_csrf" value= csrfToken)
+
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
