--- a/views/users/password-set.pug
+++ b/views/users/password-set.pug
@@ -8,7 +8,9 @@ block content
 			.alert.alert-error= error
 		else
 			
-			form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
+			form.form.form-validation(action="/api/users/password-set" method="PATCH" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
+				input(type="hidden" name="_csrf" value= csrfToken)
+
 				.reg-form.clear-fix.mdc-elevation--z1
 					input(type="hidden" name="token" value= token)
 						
