--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -4,12 +4,13 @@ block content
 	.reg-form-container.centered
 		h2 <i class="material-icons">person_add</i>  User Registration 
 	
-		form.form.form-validation(action="/api/users/register" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
+		form.form.form-validation(action="/api/users/register" method="PUT" data-jsclass="formValidator,formController" data-submitter="#submitter")
+			input(type="hidden" name="_csrf" value= csrfToken)
 				
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="email" data-validate="required,email"  data-unique-endpoint= "/api/users/is-unique?field=email")
+						input.mdc-text-field__input(name="email" data-validate="required,email"  data-unique-endpoint= "/api/users/is-unique-email")
 						label.mdc-floating-label Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
@@ -49,7 +50,7 @@ block content
 		
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(name="username" data-validate="required" placeholder="letter, numbers and dash only" data-min-length="2" data-max-length="20" data-mask="^[a-zA-Z0-9-]+$" data-mask-error-prompt="letter, numbers and dash only" data-unique-endpoint= "/api/users/is-unique?field=username")
+						input.mdc-text-field__input(name="username" data-validate="required" placeholder="letter, numbers and dash only" data-min-length="2" data-max-length="20" data-mask="^[a-zA-Z0-9-]+$" data-mask-error-prompt="letter, numbers and dash only" data-unique-endpoint= "/api/users/is-unique-username")
 						label.mdc-floating-label Username - set your unique name
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
