--- a/views/admin/edit.pug
+++ b/views/admin/edit.pug
@@ -24,6 +24,8 @@ block content
 				.page-content
 					.admin-form
 						form.form-validation(data-jsclass="formValidator" data-submitter="#submitter")
+							input(type="hidden" name="_csrf" value= csrfToken)
+
 							.flextable(data-jsclass="flexTable" data-break="screen-xsmall,screen-small")
 								ul
 									li
@@ -38,11 +40,11 @@ block content
 
 									if (admin.options.behavior !== 'reference')
 										// belongs to many relationships (through tables)
-										for manyThrough in admin.options.hasManyThrough
+										for join in admin.options.joins
 											li.label
-												= manyThrough.as
+												= join.as
 												ul
-													li.data!= admin.getColumn(manyThrough.as).getForm(row,prepared[manyThrough.as],{resolved:manyThroughs[manyThrough.as]})
+													li.data!= admin.getColumn(join.as).getForm(row,prepared[join.as],{resolved:joins[join.as]})
 														
 							section.form-group.pull-right.button-bar
 								a.mdc-button(href= back) Cancel
@@ -54,8 +56,8 @@ block content
 		p prepared
 		pre= JSON.stringify(prepared,"",2)
 		
-		p manyThroughs
-		pre= JSON.stringify(manyThroughs,"",2)
+		p joins
+		pre= JSON.stringify(joins,"",2)
 		
 		p Options
 		pre= JSON.stringify(admin.options,"",2)
